fix: PhoneFrame broken css

--- a/src/components/PhoneFrame/PhoneFrame.css
+++ b/src/components/PhoneFrame/PhoneFrame.css
@@ -1,12 +1,14 @@
 .phone-container-wrapper {
   position: relative;
   overflow: visible;
+  box-sizing: content-box;
 }
 
 .phone-container-wrapper::after {
   content: "";
   display: block;
   padding-top: 200%;
+  box-sizing: content-box;
 }
 
 .phone-container {
@@ -15,6 +17,7 @@
   left: 0;
   bottom: 0;
   right: 0;
+  box-sizing: content-box;
 }
 
 .phone-contents {
@@ -24,6 +27,7 @@
   height: 100%;
   border-radius: 36px;
   z-index: 0;
+  box-sizing: content-box;
 }
 
 .phone-frame {
@@ -38,6 +42,7 @@
   pointer-events: none;
 
   box-shadow: 0px 6px 18px rgba(0, 0, 0, 0.15);
+  box-sizing: content-box;
 }
 
 .phone-notch {
@@ -50,6 +55,7 @@
   left: 25%;
   border-bottom-left-radius: 16px;
   border-bottom-right-radius: 16px;
+  box-sizing: content-box;
 }
 
 .phone-contents > * {
@@ -60,6 +66,7 @@
   z-index: 3;
   background-color: black;
   filter: brightness(0);
+  box-sizing: content-box;
 }
 
 .phone-contents-show > * {
